updated home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,19 @@
-<p>home works!</p>
+<!-- shared components -->
 <app-navigation></app-navigation>
+
+<div class="container-fluid">
+    <div class="row intro-section">
+        <div class="col-12 col-sm-4 col-md-6 intro-content">
+            <p class="greet hi">Hi There!</p>
+            <p class="greet">I'm <span class="name">Mayank Ahuja</span></p>
+            <p id="designation">Senior Web Developer</p>
+            <p id="intro">
+                I have a 6yrs of industry experience working as a developer. I started my journey as UI developer and currently
+                working in Gurgoan for the company  providing services in the BFSI domain. It helps the banks in digitising
+                their process for account opening and loan applications in the least possible time.
+            </p>
+            <a routerLink="/more-info/about" id="know_more">More About Me</a>
+        </div>
+        <div class="col-12 col-sm-8 col-md-6 p-0 intro-image"></div>
+    </div>
+</div>
