--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'assets/styles/bootstrap-imports.scss';
+
+
+// font-family: 'Noto Serif JP', serif;
+// font-family: 'Source Sans Pro', sans-serif;
+// font-family: 'Train One', cursive;
