--- a/src/app/shared/navigation/navigation.component.scss
+++ b/src/app/shared/navigation/navigation.component.scss
@@ -1,15 +1,18 @@
+@import '../../../assets/styles/variables';
+
 .main-nav {
     display: flex;
     flex-flow: column;
     position: fixed;
+    z-index: 11;
     top: 50%;
     transform: translateY(-50%);
-    right: 15px;
+    right: 25px;
     padding: 15px 7px;
-    background-color: rgb(255, 198, 0);
+    background-color: $primary-color;
     border-radius: 20px;
     .nav-icon{
-        color: #000000;
+        color: lighten($black, 10);
         position: relative;
         font-size: 1.35em;
         margin: 10px 0;
@@ -20,7 +23,7 @@
             top: 100%;
             left: 50%;
             height: 15px;
-            border-left: 1px dashed #000000;
+            border-left: 1px dashed $black;
         }
         &:first-child{
             margin-top: 0px;
@@ -32,7 +35,7 @@
             }
         }
         &.active{
-            color: #ffffff;
+            color: $white;
         }
     }
 }
