--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,15 +13,14 @@
 
     .greet {
         font-weight: 600;
-        font-size: 3.2em;
+        font-size: 2.8em;
         color: lighten($black, 15);
         line-height: 1.5;
         font-family: 'Noto Serif JP', serif;
-
+        text-transform: uppercase;
         &.hi {
-            font-size: 2.75em;
+            font-size: 2.5em;
         }
-
         .name {
             color: $primary-color;
             font-family: 'Train One', cursive;
@@ -30,14 +29,15 @@
 
     #designation {
         display: inline-block;
-        padding: 0 10px;
+        padding: 2px 15px;
         background: $primary-color;
-        font-size: 1.15em;
+        font-size: 1em;
         margin-top: 5px;
         font-weight: 600;
         color: lighten($black, 25);
         width: fit-content;
         border-radius: 2px;
+        text-transform: uppercase;
     }
 
     .intro-content {
@@ -55,6 +55,7 @@
         color: $white;
         font-weight: 600;
         border-radius: 20px;
+        text-transform: uppercase;
     }
     #intro{
         font-family: 'Source Sans Pro', sans-serif;
