--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
 <div class="container-fluid">
     <div class="row intro-section">
-        <div class="col-12 col-sm-4 col-md-6 intro-content">
+        <div class="col-12 col-md-5 col-lg-6 intro-content">
             <p class="greet hi">Hi There!</p>
             <p class="greet">I'm <span class="name">Mayank Ahuja</span></p>
             <p id="designation">Senior Web Developer</p>
@@ -14,6 +14,6 @@
             </p>
             <a routerLink="/more-info/about" id="know_more">More About Me</a>
         </div>
-        <div class="col-12 col-sm-8 col-md-6 p-0 intro-image"></div>
+        <div class="col-12 col-md-7 col-lg-6 p-0 d-md-block intro-image"></div>
     </div>
 </div>
