added minor UI & structure for more-info pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 working in Gurgoan for the company  providing services in the BFSI domain. It helps the banks in digitising
                 their process for account opening and loan applications in the least possible time.
             </p>
-            <a routerLink="/more-info/about" id="know_more">More About Me</a>
+            <a routerLink="/more-info/about-me" id="know_more">More About Me</a>
         </div>
         <div class="col-12 col-md-7 col-lg-6 p-0 d-md-block intro-image"></div>
     </div>
