--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/home" routerLinkActive="active" class="nav-icon">
         <i class="bi bi-house-fill"></i>
     </a>
-    <a routerLink="/more-info/about" routerLinkActive="active" class="nav-icon">
+    <a routerLink="/more-info/about-me" routerLinkActive="active" class="nav-icon">
         <i class="bi bi-person-fill"></i>
     </a>
     <a routerLink="/more-info/resume" routerLinkActive="active" class="nav-icon">
