updated home page content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,10 @@
             <p class="greet">I'm <span class="name">Mayank Ahuja</span></p>
             <p id="designation">Senior Web Developer</p>
             <p id="intro">
-                I have a 6yrs of industry experience working as a developer. I started my journey as UI developer and currently
-                working in Gurgoan for the company  providing services in the BFSI domain. It helps the banks in digitising
-                their process for account opening and loan applications in the least possible time.
+                I have about 6yrs of industry experience working as a web developer. 
+                I started my journey as a UI developer and currently working in Gurgoan for the company providing 
+                services in the BFSI domain. We help the banks digitizing their process for account opening and 
+                loan applications in the least possible time.
             </p>
             <a routerLink="/more-info/about-me" id="know_more">More About Me</a>
         </div>
