--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,3 +5,9 @@ $white: #ffffff;
 $sm: 576px;
 $md: 768px;
 $lg: 992px;
+
+$source-sans: 'Source Sans Pro', sans-serif;
+$noto-serif: 'Noto Serif JP', serif;
+$train-one: 'Train One', cursive;
+
+$portfolio-image: '/assets/images/portfolio-image.jpg';
