--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,4 @@
 @import 'assets/styles/bootstrap-imports.scss';
 
 
-// font-family: 'Noto Serif JP', serif;
-// font-family: 'Source Sans Pro', sans-serif;
-// font-family: 'Train One', cursive;
+// 
