--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
     height: 100vh;
 
     .intro-image {
-        background-image: url('/assets/images/portfolio-image.jpg');
+        background-image: url($portfolio-image);
         filter: grayscale(100%);
         display: none;
         background-repeat: no-repeat;
@@ -21,7 +21,7 @@
         font-size: 2.8em;
         color: lighten($black, 15);
         line-height: 1.5;
-        font-family: 'Noto Serif JP', serif;
+        font-family: $noto-serif;
         text-transform: uppercase;
 
         &.hi {
@@ -30,7 +30,7 @@
 
         .name {
             color: $primary-color;
-            font-family: 'Train One', cursive;
+            font-family: $train-one;
         }
     }
 
@@ -67,7 +67,7 @@
     }
 
     #intro {
-        font-family: 'Source Sans Pro', sans-serif;
+        font-family: $source-sans;
         color: lighten($black, 40);
         font-size: 1em;
         margin: 25px 0;
