--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -4,7 +4,20 @@
     <div class="row">
         <div class="col-sm-3 p-0 side-section">
             <div class="portfolio-image"></div>
-            <div class="side-nav"></div>
+            <ul class="side-nav">
+                <li class="nav-item" routerLinkActive="active">
+                    <a routerLink="/home">Home</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a routerLink="/more-info/about-me">About Me</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a routerLink="/more-info/resume">Resume</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a routerLink="/more-info/contact">Contact</a>
+                </li>
+            </ul>
         </div>
         <div class="col-12 col-sm-9 page-section">
             <div class="page-name">
