--- a/src/app/shared/page-header/page-header.component.scss
+++ b/src/app/shared/page-header/page-header.component.scss
@@ -1,5 +1,7 @@
+@import '../../../assets/styles/variables';
+
 .page-head {
-    border: 1px dashed #000000;
+    border: 1px dashed $black;
     margin: 40px 0;
     padding: 20px 0;
     text-align: center;
@@ -8,7 +10,7 @@
         font-size: 4.5em;
         font-weight: 600;
         text-transform: uppercase;
-        font-family: "Source Sans Pro", sans-serif;
+        font-family: $source-sans;
         margin: 0;
     }
 }
