minor UI changes & data handling changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,13 +6,9 @@
         <div class="col-12 col-md-5 col-lg-6 intro-content">
             <p class="greet hi">Hi There!</p>
             <p class="greet">I'm <span class="name">Mayank Ahuja</span></p>
-            <p id="designation">Senior Web Developer</p>
+            <p id="designation">{{appData.designation}}</p>
             <p id="intro">
-                I have about 6yrs of industry experience working as a web developer. 
-                I started my journey as a UI developer and currently working in Gurgoan for the company providing 
-                services in the BFSI domain. We help the banks digitizing their process for account opening and 
-                loan applications in the least possible time.
-            </p>
+                {{appData.introContent}}</p>
             <a routerLink="/more-info/about-me" id="know_more">More About Me</a>
         </div>
         <div class="col-12 col-md-7 col-lg-6 p-0 d-md-block intro-image"></div>
