--- a/src/app/more-info/about/about.component.html
+++ b/src/app/more-info/about/about.component.html
@@ -1,2 +1,6 @@
-
-<p>About Me works!</p>
+<div class="about-section">
+    <h4 class="name">
+        I'm <strong>Mayank Ahuja,</strong> {{appData.designation}}
+    </h4>
+    <p class="intro">{{appData.introContent}}</p>
+</div>
