updated contact page & minor UI fixes

--- a/src/app/more-info/contact/contact.component.html
+++ b/src/app/more-info/contact/contact.component.html
@@ -1,1 +1,29 @@
-<p>contact works!</p>
+<div class="contact-section">
+    <p class="head">Feel <strong>free</strong> to contact me!</p>
+    <p class="text">I' m a fulltime web developer in Gurugram, India. You can reach out to me via below options. 
+        I may not respond to your call immediately, so please leave a me message for quick response.  </p>
+    <div class="row mt-sm-4 mt-md-5 pt-sm-4 pt-md-5">
+        <div class="col-12 col-lg-6 mb-3">
+            <div class="row">
+                <div class="col-12 col-sm-4 contact-icon">
+                    <i class="bi bi-laptop"></i>
+                </div>
+                <div class="col-12 col-sm-8 contact-data">
+                    <a href="https://www.linkedin.com/in/mayank-ahuja-dev/" target="_blank" rel="noopener noreferrer">www.linkedin.com</a>
+                    <a href="mailto:mayankahuja8894@gmail.com">mayankahuja8894@gmail.com</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 mb-3">
+            <div class="row">
+                <div class="col-12 col-sm-4 contact-icon">
+                    <i class="bi bi-telephone"></i>
+                </div>
+                <div class="col-12 col-sm-8 contact-data">
+                    <a href="tel:+918800278002">+918800278002</a>
+                </div>
+            </div>
+        </div>
+        <p class="col-12 mt-3 mt-sm-4 mt-md-5 thanks">THANKS FOR PATIENCE!</p>
+    </div>
+</div>
