--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -19,7 +19,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-12 col-sm-9 page-section">
+        <div class="col-12 page-section">
             <div class="page-name">
                 <app-page-header></app-page-header>
             </div>
