--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -38,7 +38,7 @@
         display: inline-block;
         padding: 2px 15px;
         background: $primary-color;
-        font-size: 1em;
+        font-size: 12px;
         margin-top: 5px;
         font-weight: 600;
         color: lighten($black, 25);
@@ -71,5 +71,6 @@
         color: lighten($black, 40);
         font-size: 1em;
         margin: 25px 0;
+        padding: 0 50px 0 0;
     }
 }
