--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -48,11 +48,19 @@
     }
 
     .intro-content {
-        display: flex;
-        justify-content: center;
-        flex-flow: column nowrap;
+        // display: flex;
+        // justify-content: center;
+        // flex-flow: column nowrap;
+        // padding: 0 5vw 0 10vw;
+        // height: 100%;
         padding: 0 5vw 0 10vw;
-        height: 100%;
+position: absolute;
+top: 50%;
+bottom: 0;
+height: fit-content;
+left: 0;
+right: 0;
+transform: translate(0, -50%);
     }
 
     #know_more {
