--- a/src/app/more-info/contact/contact.component.scss
+++ b/src/app/more-info/contact/contact.component.scss
@@ -16,12 +16,13 @@
     .text {
         font-weight: 200;
         font-size: 1.05em;
+        padding: 0 20px 0 0;
     }
 
     .contact-icon {
         text-align: center;
         i {
-            font-size: 2.5em;
+            font-size: 2.15em;
             color: lighten($black, 25%);
         }
     }
