--- a/src/app/more-info/more-info.component.scss
+++ b/src/app/more-info/more-info.component.scss
@@ -41,6 +41,8 @@
         justify-content: center;
         list-style: none;
         padding: 0px;
+        overflow-x: hidden;
+        overflow-y: auto;
 
         .nav-item {
             margin: 15px 0;
@@ -100,11 +102,17 @@
     width: 100vw;
     background-color: lighten($black, 85%);
     padding: 0 15px;
+    box-sizing: border-box;
+    padding-bottom: 5vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 @media screen and (min-width: $sm) {
     .page-section{
-        padding: 0 10vw;
+        padding-top: 0;
+        padding-left: 10vw;
+        padding-right: 10vw;
     }
 }
 
