--- a/src/app/shared/navigation/navigation.component.scss
+++ b/src/app/shared/navigation/navigation.component.scss
@@ -7,7 +7,7 @@
     z-index: 11;
     top: 50%;
     transform: translateY(-50%);
-    right: 15px;
+    right: 8px;
     padding: 15px 7px;
     background-color: $primary-color;
     border-radius: 20px;
@@ -37,5 +37,11 @@
         &.active{
             color: $white;
         }
+    }
+}
+
+@media screen and (min-width: $md){
+    .main-nav {
+        display: none;
     }
 }
