mnor text and UI changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
             <p class="greet">I'm <span class="name">Mayank Ahuja</span></p>
             <p id="designation">{{appData.designation}}</p>
             <p id="intro">
-                {{appData.introContent}}</p>
+                {{appData.subtitle}}</p>
             <a routerLink="/more-info/about-me" id="know_more">More About Me</a>
         </div>
         <div class="col-12 col-md-7 col-lg-6 p-0 d-md-block intro-image"></div>
