--- a/src/app/more-info/about/about.component.html
+++ b/src/app/more-info/about/about.component.html
@@ -2,5 +2,5 @@
     <h4 class="name">
         I'm <strong>Mayank Ahuja,</strong> {{appData.designation}}
     </h4>
-    <p class="intro">{{appData.introContent}}</p>
+    <p class="intro" [innerHTML]="appData.introContent"></p>
 </div>
