updated contact details

--- a/src/app/more-info/contact/contact.component.html
+++ b/src/app/more-info/contact/contact.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-12 col-sm-8 contact-data">
                     <a href="https://www.linkedin.com/in/mayank-ahuja-dev/" target="_blank" rel="noopener noreferrer">www.linkedin.com</a>
-                    <a href="mailto:mayankahuja8894@gmail.com">mayankahuja8894@gmail.com</a>
+                    <a href="mailto:mayank@mayankahuja.in">mayank@mayankahuja.in</a>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
                     <i class="bi bi-telephone"></i>
                 </div>
                 <div class="col-12 col-sm-8 contact-data">
-                    <a href="tel:+918800278002">+918800278002</a>
+                    <a href="tel:+917982263492">+917982263492</a>
                 </div>
             </div>
         </div>
